# alphathon

./: .env.template  .gitignore  Data Acqusition.ipynb  README.md  download_data.py  format_opt.py  instrument_selected_instruments.json  pyproject.toml  requirements.txt  setup.py
CSP_Options/: __init__.py  constants.py  csp_tqdm.py  fama.py  microstructure.py  nodes.py  option_graphs.py  panel_dashboard.py  parquet_writer.py  regime_decomposition.py  regime_nodes.py  rnd_nodes.py  structs.py  vecm_leadership.py
docs/: GamePlan (Steps 4,5 Incomplete).md  Greg_WkngIdeas_on_Binary_Martingales.md  MATHEMATICS.md  MERMAID.md  MiniPaper.md  csp_pull_request.md  extracting_density_gaussian_process_reg.md  implied_fama_rnd_and_info_share.md
fama/: 1. Get Data from WRDS.py  2. Fit Fama NB Version.ipynb  3. Analyze Results.ipynb  4. Get Daily Factors.ipynb  All_Stock_Tickers.csv  apply_daily_factors.py  fac_returns.csv  factor_loadings copy.ipynb  factor_weights_tickers.json  fama_french_portfolios_2024.csv  fama_french_portfolios_2025.csv  fama_french_portfolios_all_years.csv  tidy_finance_python.sqlite  top_100_etfs.csv
graphing/: Calculating_Binary_RiskNeutralDensities.py  Demonstrate_Factors_and_Microstructure_Features.py  Leadership_and_FactorModel.py  test_fama_and_microstructure_features.py  test_microstructure.py
information_leadership_research (no time)/: 1m_analysis.ipynb  Pivot_Data.ipynb  csp_to_davids_pipeline.py
mv_rnd/: .gitignore  A model-free approach to multivariate option pricing.md  Prompt.md  README.md  STATUS.md  __init__.py  requirements.txt
(+66 files in other folders)
